cabal-version:       >=1.10
-- http://haskell.org/cabal/users-guide/

name:                hello-world
version:             0.0.0
synopsis:            A "Hello, World!" in an introductory computer program.
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Subhajit Sahu
maintainer:          wolfram77@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable hello-world
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
